--- a/resume.html
+++ b/resume.html
@@ -63,78 +63,51 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Personal info</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="10/20016 - 8/2018">
+                        <h4>Escola Superior de Rio Maior</h4>
+                        <p>Sports Science</p>
                     </div>
-                    <div class="value">
-                        <p>
-                            Dmytro Martynenko
-                        </p>
+                    <div class="timeline-item" data-dates="10/2018 - 10/2019">
+                        <h4>Deutsche Sporthochschule Koeln</h4>
+                        <p>Sports Science</p>
                     </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Address:
-                        </p>
+                    <div class="timeline-item" data-dates="10/2019 - 08/2020">
+                        <h4>Kopfsprung Koeln</h4>
+                        <p>Assistant Swimming Coach</p>
                     </div>
-                    <div class="value">
-                        <p>
-                            Ehrenfeldgürtel 14; Köln
-                        </p>
+                    <div class="timeline-item" data-dates="09/2020 - 09/2022">
+                        <h4>TSV Solingen</h4>
+                        <p>Head Swimming Coach</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2022 - 07/2023">
+                        <h4>Code Institute</h4>
+                        <p>Full Stack Developer Student</p>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Phone:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            (+351) 939315575
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Email:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            dmytromartynenko1@gmail.com
-                        </p>
-                    </div>
-                </div>
-
             </div>
-            <div class="col-md-8 bg-color-three-reasons section-column">
+            <div class="col-md-8 bg-color-three-reasons">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">About me</h3>
+                        <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-question" aria-hiddent="true"></i>
+                                <i class="three-reasons-icon fa fa-tv" aria-hiddent="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
-                                <p>I'm a skilled Full Stack Developer with a wealth of diverse
-                                    life and technical experience that I bring to every project.
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I
+                                    also have extensive experience in Front End Frameworks such as Angular and React
                                 </p>
                             </div>
                         </div>
@@ -142,38 +115,52 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hiddent="true"></i>
+                                <i class="three-reasons-icon fa fa-gears" aria-hiddent="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
-                                <p>I follow form as well as function. I know that the aesthetics of effective
-                                    design combined with application speed, security and reliability combine to create a
-                                    great user experience.
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>I specialize in data-driven web applications. Many of my projects utilise
+                                    document-based data. I use Python and Django in conjunction with MongoDB to
+                                    process and present information.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 offset-1 offset-sm-0  col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-bolt" aria-hiddent="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                                <p>I work quickly and effectively in getting things built and working across the stack.
-                                    I'm an excellent
-                                    communicator who thrives in bright and enthusiastic teams and I'm also a self
-                                    starter when working solo.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
-
+                <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                aria-valuemax="100" style="width:90%;"><span class="progress-type">HTML /
+                                    HTML5</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="93" aria-valuemin="0"
+                                aria-valuemax="100" style="width:93%;"><span class="progress-type">CSS / CSS3</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width:70%;"><span class="progress-type">JavaScript /
+                                    jQuery</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                                aria-valuemax="100" style="width:75%;"><span class="progress-type">Django /
+                                    Python</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width:70%;"><span class="progress-type">SQL / NoSQL</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </section>
 
     <footer class="container-fluid">
