--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Ehrenfeldgürtel 14; Köln
+                            New Cascade Road, Norfolk Island
                         </p>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            (+351) 939315575
+                            55737
                         </p>
                     </div>
                 </div>
