Rename titles on the pages

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             emailjs.init("8slaLYUb1VhYxlnkY");
         })();
     </script>
-    <title>Dimi</title>
+    <title>Contact Dimi</title>
 </head>
 
 <body>
