--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Dimi</title>
+    <title>Dimi Home</title>
 </head>
 
 <body>
