--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <script type="text/javascript">
         (function () {
             emailjs.init("8slaLYUb1VhYxlnkY");
